trabalho1/LI2/ParLI.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.4.1).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module ParLI
  ( happyError
  , myLexer
  , pProgram
  , pFunction
  , pListStm
  , pListFunction
  , pListIdent
  , pListExp
  , pStm
  , pExp1
  , pExp2
  , pExp3
  , pExp4
  , pExp5
  , pExp6
  , pExp7
  , pExp
  ) where

import Prelude

import qualified AbsLI
import LexLI

}

%name pProgram Program
%name pFunction Function
%name pListStm ListStm
%name pListFunction ListFunction
%name pListIdent ListIdent
%name pListExp ListExp
%name pStm Stm
%name pExp1 Exp1
%name pExp2 Exp2
%name pExp3 Exp3
%name pExp4 Exp4
%name pExp5 Exp5
%name pExp6 Exp6
%name pExp7 Exp7
%name pExp Exp
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'      { PT _ (TS _ 1)  }
  '&&'     { PT _ (TS _ 2)  }
  '('      { PT _ (TS _ 3)  }
  ')'      { PT _ (TS _ 4)  }
  '*'      { PT _ (TS _ 5)  }
  '+'      { PT _ (TS _ 6)  }
  '++'     { PT _ (TS _ 7)  }
  ','      { PT _ (TS _ 8)  }
  '-'      { PT _ (TS _ 9)  }
  '/'      { PT _ (TS _ 10) }
  ';'      { PT _ (TS _ 11) }
  '='      { PT _ (TS _ 12) }
  'else'   { PT _ (TS _ 13) }
  'false'  { PT _ (TS _ 14) }
  'if'     { PT _ (TS _ 15) }
  'return' { PT _ (TS _ 16) }
  'then'   { PT _ (TS _ 17) }
  'true'   { PT _ (TS _ 18) }
  'while'  { PT _ (TS _ 19) }
  '{'      { PT _ (TS _ 20) }
  '||'     { PT _ (TS _ 21) }
  '}'      { PT _ (TS _ 22) }
  L_Ident  { PT _ (TV $$)   }
  L_integ  { PT _ (TI $$)   }
  L_quoted { PT _ (TL $$)   }

%%

Ident :: { AbsLI.Ident }
Ident  : L_Ident { AbsLI.Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

String  :: { String }
String   : L_quoted { $1 }

Program :: { AbsLI.Program }
Program : ListFunction { AbsLI.Prog $1 }

Function :: { AbsLI.Function }
Function
  : Ident '(' ListIdent ')' '{' ListStm '}' { AbsLI.Fun $1 $3 $6 }

ListStm :: { [AbsLI.Stm] }
ListStm : {- empty -} { [] } | Stm ListStm { (:) $1 $2 }

ListFunction :: { [AbsLI.Function] }
ListFunction
  : {- empty -} { [] } | Function ListFunction { (:) $1 $2 }

ListIdent :: { [AbsLI.Ident] }
ListIdent
  : {- empty -} { [] }
  | Ident { (:[]) $1 }
  | Ident ',' ListIdent { (:) $1 $3 }

ListExp :: { [AbsLI.Exp] }
ListExp
  : {- empty -} { [] }
  | Exp { (:[]) $1 }
  | Exp ',' ListExp { (:) $1 $3 }

Stm :: { AbsLI.Stm }
Stm
  : Ident '=' Exp ';' { AbsLI.SAss $1 $3 }
  | '{' ListStm '}' { AbsLI.SBlock $2 }
  | 'while' '(' Exp ')' Stm { AbsLI.SWhile $3 $5 }
  | 'return' Exp ';' { AbsLI.SReturn $2 }
  | 'if' '(' Exp ')' 'then' Stm 'else' Stm { AbsLI.SIf $3 $6 $8 }

Exp1 :: { AbsLI.Exp }
Exp1 : Exp1 '||' Exp2 { AbsLI.EOr $1 $3 } | Exp2 { $1 }

Exp2 :: { AbsLI.Exp }
Exp2 : Exp2 '&&' Exp3 { AbsLI.EAnd $1 $3 } | Exp3 { $1 }

Exp3 :: { AbsLI.Exp }
Exp3 : '!' Exp3 { AbsLI.ENot $2 } | Exp4 { $1 }

Exp4 :: { AbsLI.Exp }
Exp4
  : Exp4 '++' Exp5 { AbsLI.ECon $1 $3 }
  | Exp4 '+' Exp5 { AbsLI.EAdd $1 $3 }
  | Exp4 '-' Exp5 { AbsLI.ESub $1 $3 }
  | Exp5 { $1 }

Exp5 :: { AbsLI.Exp }
Exp5
  : Exp5 '*' Exp6 { AbsLI.EMul $1 $3 }
  | Exp5 '/' Exp6 { AbsLI.EDiv $1 $3 }
  | Exp6 { $1 }

Exp6 :: { AbsLI.Exp }
Exp6 : Ident '(' ListExp ')' { AbsLI.Call $1 $3 } | Exp7 { $1 }

Exp7 :: { AbsLI.Exp }
Exp7
  : Integer { AbsLI.EInt $1 }
  | Ident { AbsLI.EVar $1 }
  | String { AbsLI.EStr $1 }
  | 'true' { AbsLI.ETrue }
  | 'false' { AbsLI.EFalse }
  | '(' Exp ')' { $2 }

Exp :: { AbsLI.Exp }
Exp : Exp1 { $1 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
