LI2/ParLI.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParLI.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pFunction -> Function                       (1)
	%start_pListStm -> ListStm                         (2)
	%start_pListFunction -> ListFunction               (3)
	%start_pListIdent -> ListIdent                     (4)
	%start_pListExp -> ListExp                         (5)
	%start_pStm -> Stm                                 (6)
	%start_pExp1 -> Exp1                               (7)
	%start_pExp2 -> Exp2                               (8)
	%start_pExp3 -> Exp3                               (9)
	%start_pExp4 -> Exp4                               (10)
	%start_pExp5 -> Exp5                               (11)
	%start_pExp6 -> Exp6                               (12)
	%start_pExp7 -> Exp7                               (13)
	%start_pExp -> Exp                                 (14)
	Ident -> L_Ident                                   (15)
	Integer -> L_integ                                 (16)
	String -> L_quoted                                 (17)
	Program -> ListFunction                            (18)
	Function -> Ident '(' ListIdent ')' '{' ListStm '}'   (19)
	ListStm ->                                         (20)
	ListStm -> Stm ListStm                             (21)
	ListFunction ->                                    (22)
	ListFunction -> Function ListFunction              (23)
	ListIdent ->                                       (24)
	ListIdent -> Ident                                 (25)
	ListIdent -> Ident ',' ListIdent                   (26)
	ListExp ->                                         (27)
	ListExp -> Exp                                     (28)
	ListExp -> Exp ',' ListExp                         (29)
	Stm -> Ident '=' Exp ';'                           (30)
	Stm -> '{' ListStm '}'                             (31)
	Stm -> 'while' '(' Exp ')' Stm                     (32)
	Stm -> 'return' Exp ';'                            (33)
	Stm -> 'if' '(' Exp ')' 'then' Stm 'else' Stm      (34)
	Exp1 -> Exp1 '||' Exp2                             (35)
	Exp1 -> Exp2                                       (36)
	Exp2 -> Exp2 '&&' Exp3                             (37)
	Exp2 -> Exp3                                       (38)
	Exp3 -> '!' Exp3                                   (39)
	Exp3 -> Exp4                                       (40)
	Exp4 -> Exp4 '++' Exp5                             (41)
	Exp4 -> Exp4 '+' Exp5                              (42)
	Exp4 -> Exp4 '-' Exp5                              (43)
	Exp4 -> Exp5                                       (44)
	Exp5 -> Exp5 '*' Exp6                              (45)
	Exp5 -> Exp5 '/' Exp6                              (46)
	Exp5 -> Exp6                                       (47)
	Exp6 -> Ident '(' ListExp ')'                      (48)
	Exp6 -> Exp7                                       (49)
	Exp7 -> Integer                                    (50)
	Exp7 -> Ident                                      (51)
	Exp7 -> String                                     (52)
	Exp7 -> 'true'                                     (53)
	Exp7 -> 'false'                                    (54)
	Exp7 -> '(' Exp ')'                                (55)
	Exp -> Exp1                                        (56)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'/'            { PT _ (TS _ 10) }
	';'            { PT _ (TS _ 11) }
	'='            { PT _ (TS _ 12) }
	'else'         { PT _ (TS _ 13) }
	'false'        { PT _ (TS _ 14) }
	'if'           { PT _ (TS _ 15) }
	'return'       { PT _ (TS _ 16) }
	'then'         { PT _ (TS _ 17) }
	'true'         { PT _ (TS _ 18) }
	'while'        { PT _ (TS _ 19) }
	'{'            { PT _ (TS _ 20) }
	'||'           { PT _ (TS _ 21) }
	'}'            { PT _ (TS _ 22) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pFunction rule  1
	%start_pListStm rule  2
	%start_pListFunction rule  3
	%start_pListIdent rule  4
	%start_pListExp rule  5
	%start_pStm     rule  6
	%start_pExp1    rule  7
	%start_pExp2    rule  8
	%start_pExp3    rule  9
	%start_pExp4    rule  10
	%start_pExp5    rule  11
	%start_pExp6    rule  12
	%start_pExp7    rule  13
	%start_pExp     rule  14
	Ident           rule  15
	Integer         rule  16
	String          rule  17
	Program         rule  18
	Function        rule  19
	ListStm         rules 20, 21
	ListFunction    rules 22, 23
	ListIdent       rules 24, 25, 26
	ListExp         rules 27, 28, 29
	Stm             rules 30, 31, 32, 33, 34
	Exp1            rules 35, 36
	Exp2            rules 37, 38
	Exp3            rules 39, 40
	Exp4            rules 41, 42, 43, 44
	Exp5            rules 45, 46, 47
	Exp6            rules 48, 49
	Exp7            rules 50, 51, 52, 53, 54, 55
	Exp             rule  56

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	L_Ident        shift, and enter state 16
	%eof           reduce using rule 22

	Ident          goto state 52
	Program        goto state 58
	Function       goto state 53
	ListFunction   goto state 59

State 1

	%start_pFunction -> . Function                      (rule 1)

	L_Ident        shift, and enter state 16

	Ident          goto state 52
	Function       goto state 57

State 2

	%start_pListStm -> . ListStm                        (rule 2)

	'if'           shift, and enter state 44
	'return'       shift, and enter state 45
	'while'        shift, and enter state 46
	'{'            shift, and enter state 47
	L_Ident        shift, and enter state 16
	%eof           reduce using rule 20

	Ident          goto state 42
	ListStm        goto state 55
	Stm            goto state 56

State 3

	%start_pListFunction -> . ListFunction              (rule 3)

	L_Ident        shift, and enter state 16
	%eof           reduce using rule 22

	Ident          goto state 52
	Function       goto state 53
	ListFunction   goto state 54

State 4

	%start_pListIdent -> . ListIdent                    (rule 4)

	L_Ident        shift, and enter state 16
	%eof           reduce using rule 24

	Ident          goto state 50
	ListIdent      goto state 51

State 5

	%start_pListExp -> . ListExp                        (rule 5)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33
	%eof           reduce using rule 27

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	ListExp        goto state 48
	Exp1           goto state 20
	Exp2           goto state 21
	Exp3           goto state 22
	Exp4           goto state 23
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26
	Exp            goto state 49

State 6

	%start_pStm -> . Stm                                (rule 6)

	'if'           shift, and enter state 44
	'return'       shift, and enter state 45
	'while'        shift, and enter state 46
	'{'            shift, and enter state 47
	L_Ident        shift, and enter state 16

	Ident          goto state 42
	Stm            goto state 43

State 7

	%start_pExp1 -> . Exp1                              (rule 7)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp1           goto state 41
	Exp2           goto state 21
	Exp3           goto state 22
	Exp4           goto state 23
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26

State 8

	%start_pExp2 -> . Exp2                              (rule 8)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp2           goto state 40
	Exp3           goto state 22
	Exp4           goto state 23
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26

State 9

	%start_pExp3 -> . Exp3                              (rule 9)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp3           goto state 39
	Exp4           goto state 23
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26

State 10

	%start_pExp4 -> . Exp4                              (rule 10)

	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp4           goto state 38
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26

State 11

	%start_pExp5 -> . Exp5                              (rule 11)

	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp5           goto state 37
	Exp6           goto state 25
	Exp7           goto state 26

State 12

	%start_pExp6 -> . Exp6                              (rule 12)

	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp6           goto state 36
	Exp7           goto state 26

State 13

	%start_pExp7 -> . Exp7                              (rule 13)

	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 34
	Integer        goto state 18
	String         goto state 19
	Exp7           goto state 35

State 14

	%start_pExp -> . Exp                                (rule 14)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp1           goto state 20
	Exp2           goto state 21
	Exp3           goto state 22
	Exp4           goto state 23
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26
	Exp            goto state 27

State 15

	Ident -> . L_Ident                                  (rule 15)

	L_Ident        shift, and enter state 16


State 16

	Ident -> L_Ident .                                  (rule 15)

	'&&'           reduce using rule 15
	'('            reduce using rule 15
	')'            reduce using rule 15
	'*'            reduce using rule 15
	'+'            reduce using rule 15
	'++'           reduce using rule 15
	','            reduce using rule 15
	'-'            reduce using rule 15
	'/'            reduce using rule 15
	';'            reduce using rule 15
	'='            reduce using rule 15
	'||'           reduce using rule 15
	%eof           reduce using rule 15


State 17

	Exp6 -> Ident . '(' ListExp ')'                     (rule 48)
	Exp7 -> Ident .                                     (rule 51)

	'&&'           reduce using rule 51
	'('            shift, and enter state 79
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	'++'           reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'/'            reduce using rule 51
	';'            reduce using rule 51
	'||'           reduce using rule 51
	%eof           reduce using rule 51


State 18

	Exp7 -> Integer .                                   (rule 50)

	'&&'           reduce using rule 50
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	'++'           reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'/'            reduce using rule 50
	';'            reduce using rule 50
	'||'           reduce using rule 50
	%eof           reduce using rule 50


State 19

	Exp7 -> String .                                    (rule 52)

	'&&'           reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	'++'           reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            reduce using rule 52
	';'            reduce using rule 52
	'||'           reduce using rule 52
	%eof           reduce using rule 52


State 20

	Exp1 -> Exp1 . '||' Exp2                            (rule 35)
	Exp -> Exp1 .                                       (rule 56)

	')'            reduce using rule 56
	','            reduce using rule 56
	';'            reduce using rule 56
	'||'           shift, and enter state 70
	%eof           reduce using rule 56


State 21

	Exp1 -> Exp2 .                                      (rule 36)
	Exp2 -> Exp2 . '&&' Exp3                            (rule 37)

	'&&'           shift, and enter state 71
	')'            reduce using rule 36
	','            reduce using rule 36
	';'            reduce using rule 36
	'||'           reduce using rule 36
	%eof           reduce using rule 36


State 22

	Exp2 -> Exp3 .                                      (rule 38)

	'&&'           reduce using rule 38
	')'            reduce using rule 38
	','            reduce using rule 38
	';'            reduce using rule 38
	'||'           reduce using rule 38
	%eof           reduce using rule 38


State 23

	Exp3 -> Exp4 .                                      (rule 40)
	Exp4 -> Exp4 . '++' Exp5                            (rule 41)
	Exp4 -> Exp4 . '+' Exp5                             (rule 42)
	Exp4 -> Exp4 . '-' Exp5                             (rule 43)

	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'+'            shift, and enter state 72
	'++'           shift, and enter state 73
	','            reduce using rule 40
	'-'            shift, and enter state 74
	';'            reduce using rule 40
	'||'           reduce using rule 40
	%eof           reduce using rule 40


State 24

	Exp4 -> Exp5 .                                      (rule 44)
	Exp5 -> Exp5 . '*' Exp6                             (rule 45)
	Exp5 -> Exp5 . '/' Exp6                             (rule 46)

	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            shift, and enter state 75
	'+'            reduce using rule 44
	'++'           reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            shift, and enter state 76
	';'            reduce using rule 44
	'||'           reduce using rule 44
	%eof           reduce using rule 44


State 25

	Exp5 -> Exp6 .                                      (rule 47)

	'&&'           reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	'++'           reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'||'           reduce using rule 47
	%eof           reduce using rule 47


State 26

	Exp6 -> Exp7 .                                      (rule 49)

	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	'++'           reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'/'            reduce using rule 49
	';'            reduce using rule 49
	'||'           reduce using rule 49
	%eof           reduce using rule 49


State 27

	%start_pExp -> Exp .                                (rule 14)

	%eof           accept


State 28

	Exp3 -> '!' . Exp3                                  (rule 39)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp3           goto state 78
	Exp4           goto state 23
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26

State 29

	Exp7 -> '(' . Exp ')'                               (rule 55)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp1           goto state 20
	Exp2           goto state 21
	Exp3           goto state 22
	Exp4           goto state 23
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26
	Exp            goto state 77

State 30

	Exp7 -> 'false' .                                   (rule 54)

	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	'++'           reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            reduce using rule 54
	';'            reduce using rule 54
	'||'           reduce using rule 54
	%eof           reduce using rule 54


State 31

	Exp7 -> 'true' .                                    (rule 53)

	'&&'           reduce using rule 53
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'+'            reduce using rule 53
	'++'           reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'/'            reduce using rule 53
	';'            reduce using rule 53
	'||'           reduce using rule 53
	%eof           reduce using rule 53


State 32

	Integer -> L_integ .                                (rule 16)

	'&&'           reduce using rule 16
	')'            reduce using rule 16
	'*'            reduce using rule 16
	'+'            reduce using rule 16
	'++'           reduce using rule 16
	','            reduce using rule 16
	'-'            reduce using rule 16
	'/'            reduce using rule 16
	';'            reduce using rule 16
	'||'           reduce using rule 16
	%eof           reduce using rule 16


State 33

	String -> L_quoted .                                (rule 17)

	'&&'           reduce using rule 17
	')'            reduce using rule 17
	'*'            reduce using rule 17
	'+'            reduce using rule 17
	'++'           reduce using rule 17
	','            reduce using rule 17
	'-'            reduce using rule 17
	'/'            reduce using rule 17
	';'            reduce using rule 17
	'||'           reduce using rule 17
	%eof           reduce using rule 17


State 34

	Exp7 -> Ident .                                     (rule 51)

	%eof           reduce using rule 51


State 35

	%start_pExp7 -> Exp7 .                              (rule 13)

	%eof           accept


State 36

	%start_pExp6 -> Exp6 .                              (rule 12)

	%eof           accept


State 37

	%start_pExp5 -> Exp5 .                              (rule 11)
	Exp5 -> Exp5 . '*' Exp6                             (rule 45)
	Exp5 -> Exp5 . '/' Exp6                             (rule 46)

	'*'            shift, and enter state 75
	'/'            shift, and enter state 76
	%eof           accept


State 38

	%start_pExp4 -> Exp4 .                              (rule 10)
	Exp4 -> Exp4 . '++' Exp5                            (rule 41)
	Exp4 -> Exp4 . '+' Exp5                             (rule 42)
	Exp4 -> Exp4 . '-' Exp5                             (rule 43)

	'+'            shift, and enter state 72
	'++'           shift, and enter state 73
	'-'            shift, and enter state 74
	%eof           accept


State 39

	%start_pExp3 -> Exp3 .                              (rule 9)

	%eof           accept


State 40

	%start_pExp2 -> Exp2 .                              (rule 8)
	Exp2 -> Exp2 . '&&' Exp3                            (rule 37)

	'&&'           shift, and enter state 71
	%eof           accept


State 41

	%start_pExp1 -> Exp1 .                              (rule 7)
	Exp1 -> Exp1 . '||' Exp2                            (rule 35)

	'||'           shift, and enter state 70
	%eof           accept


State 42

	Stm -> Ident . '=' Exp ';'                          (rule 30)

	'='            shift, and enter state 69


State 43

	%start_pStm -> Stm .                                (rule 6)

	%eof           accept


State 44

	Stm -> 'if' . '(' Exp ')' 'then' Stm 'else' Stm     (rule 34)

	'('            shift, and enter state 68


State 45

	Stm -> 'return' . Exp ';'                           (rule 33)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp1           goto state 20
	Exp2           goto state 21
	Exp3           goto state 22
	Exp4           goto state 23
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26
	Exp            goto state 67

State 46

	Stm -> 'while' . '(' Exp ')' Stm                    (rule 32)

	'('            shift, and enter state 66


State 47

	Stm -> '{' . ListStm '}'                            (rule 31)

	'if'           shift, and enter state 44
	'return'       shift, and enter state 45
	'while'        shift, and enter state 46
	'{'            shift, and enter state 47
	'}'            reduce using rule 20
	L_Ident        shift, and enter state 16

	Ident          goto state 42
	ListStm        goto state 65
	Stm            goto state 56

State 48

	%start_pListExp -> ListExp .                        (rule 5)

	%eof           accept


State 49

	ListExp -> Exp .                                    (rule 28)
	ListExp -> Exp . ',' ListExp                        (rule 29)

	')'            reduce using rule 28
	','            shift, and enter state 64
	%eof           reduce using rule 28


State 50

	ListIdent -> Ident .                                (rule 25)
	ListIdent -> Ident . ',' ListIdent                  (rule 26)

	')'            reduce using rule 25
	','            shift, and enter state 63
	%eof           reduce using rule 25


State 51

	%start_pListIdent -> ListIdent .                    (rule 4)

	%eof           accept


State 52

	Function -> Ident . '(' ListIdent ')' '{' ListStm '}'    (rule 19)

	'('            shift, and enter state 62


State 53

	ListFunction -> Function . ListFunction             (rule 23)

	L_Ident        shift, and enter state 16
	%eof           reduce using rule 22

	Ident          goto state 52
	Function       goto state 53
	ListFunction   goto state 61

State 54

	%start_pListFunction -> ListFunction .              (rule 3)

	%eof           accept


State 55

	%start_pListStm -> ListStm .                        (rule 2)

	%eof           accept


State 56

	ListStm -> Stm . ListStm                            (rule 21)

	'if'           shift, and enter state 44
	'return'       shift, and enter state 45
	'while'        shift, and enter state 46
	'{'            shift, and enter state 47
	'}'            reduce using rule 20
	L_Ident        shift, and enter state 16
	%eof           reduce using rule 20

	Ident          goto state 42
	ListStm        goto state 60
	Stm            goto state 56

State 57

	%start_pFunction -> Function .                      (rule 1)

	%eof           accept


State 58

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 59

	Program -> ListFunction .                           (rule 18)

	%eof           reduce using rule 18


State 60

	ListStm -> Stm ListStm .                            (rule 21)

	'}'            reduce using rule 21
	%eof           reduce using rule 21


State 61

	ListFunction -> Function ListFunction .             (rule 23)

	%eof           reduce using rule 23


State 62

	Function -> Ident '(' . ListIdent ')' '{' ListStm '}'    (rule 19)

	')'            reduce using rule 24
	L_Ident        shift, and enter state 16

	Ident          goto state 50
	ListIdent      goto state 96

State 63

	ListIdent -> Ident ',' . ListIdent                  (rule 26)

	')'            reduce using rule 24
	L_Ident        shift, and enter state 16
	%eof           reduce using rule 24

	Ident          goto state 50
	ListIdent      goto state 95

State 64

	ListExp -> Exp ',' . ListExp                        (rule 29)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	')'            reduce using rule 27
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33
	%eof           reduce using rule 27

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	ListExp        goto state 94
	Exp1           goto state 20
	Exp2           goto state 21
	Exp3           goto state 22
	Exp4           goto state 23
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26
	Exp            goto state 49

State 65

	Stm -> '{' ListStm . '}'                            (rule 31)

	'}'            shift, and enter state 93


State 66

	Stm -> 'while' '(' . Exp ')' Stm                    (rule 32)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp1           goto state 20
	Exp2           goto state 21
	Exp3           goto state 22
	Exp4           goto state 23
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26
	Exp            goto state 92

State 67

	Stm -> 'return' Exp . ';'                           (rule 33)

	';'            shift, and enter state 91


State 68

	Stm -> 'if' '(' . Exp ')' 'then' Stm 'else' Stm     (rule 34)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp1           goto state 20
	Exp2           goto state 21
	Exp3           goto state 22
	Exp4           goto state 23
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26
	Exp            goto state 90

State 69

	Stm -> Ident '=' . Exp ';'                          (rule 30)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp1           goto state 20
	Exp2           goto state 21
	Exp3           goto state 22
	Exp4           goto state 23
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26
	Exp            goto state 89

State 70

	Exp1 -> Exp1 '||' . Exp2                            (rule 35)

	'!'            shift, and enter state 28
	'('            shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 16
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Exp2           goto state 88
	Exp3           goto state 22
	Exp4           goto state 23
	Exp5           goto state 24
	Exp6           goto state 25
	Exp7           goto state 26

State 71

	Exp2 -> Exp2 '&&' . Exp3                            (rule 37)
